--- a/EndavaForms/EndavaForms/EndavaForms.csproj
+++ b/EndavaForms/EndavaForms/EndavaForms.csproj
@@ -24,6 +24,9 @@
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistroRest.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
