Se agrega la pantalla de NuevoRegistro para crear registros en la base de datos y se cambia la manera de cargar registros desde LocalDbViewModel

--- a/EndavaForms/EndavaForms/EndavaForms.csproj
+++ b/EndavaForms/EndavaForms/EndavaForms.csproj
@@ -25,6 +25,9 @@
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NuevoRegistro.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RegistroRest.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
